opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/async_durable"
bug-reports: "https://github.com/janestreet/async_durable/issues"
dev-repo: "git+https://github.com/janestreet/async_durable.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "--only-packages" "async_durable" "--root" "." "-j" jobs "@install"]
]
depends: [
  "async_kernel"
  "async_rpc_kernel"
  "async_unix"
  "core"
  "jbuilder"                {build & >= "1.0+beta8"}
  "ppx_driver"
  "ppx_jane"
  "ocaml-migrate-parsetree" {>= "0.4"}
]
available: [ ocaml-version >= "4.03.0" ]
descr: "
Durable connections for use with async

\\ Async_durable helps recover from errors when
connections can be easily be recreated.
"
