opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/async_durable"
bug-reports: "https://github.com/janestreet/async_durable/issues"
dev-repo: "git+https://github.com/janestreet/async_durable.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "async_kernel"
  "async_rpc_kernel"
  "core_kernel"
  "ppx_jane"
  "jbuilder"                {build & >= "1.0+beta18.1"}
  "ocaml-migrate-parsetree" {>= "1.0"}
  "ppxlib"                  {>= "0.1.0"}
]
available: [ ocaml-version >= "4.06.1" ]
descr: "
Durable connections for use with async

\\ Async_durable helps recover from errors when
connections can be easily be recreated.
"
