opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/async_durable"
bug-reports: "https://github.com/janestreet/async_durable/issues"
dev-repo: "git+https://github.com/janestreet/async_durable.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/async_durable/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "async_kernel"
  "async_rpc_kernel"
  "core"
  "core_kernel"
  "ppx_jane"
  "dune"             {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Durable connections for use with async"
description: "
Async_durable helps recover from errors when connections can be easily be recreated.
"
